<resources>
    <string name="app_name">Dear Claire</string>
    <string name="app_catch_phrase">Secret Diary Chat</string>
    <string name="common_message_loading">Loading…</string>
    <string name="common_error_login_again">Please login again to continue</string>
    <string name="common_chooser_title_share_using">Share using</string>
    <string name="common_message_share_app">Have you heard about this app called Dear Claire?
It\'s like a secret diary chat 🌸 An app where you can write or record anything anonymously and get advise free 💕 🔐 You can also follow people\'s secrets and earn cash for your advise.
Tap this link to read more about it and install on your Android phone.
%2$s</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="common_content_desc_remove_photo">Remove photo</string>
    <string name="common_title_claire">Dear Claire</string>
    <string name="common_title_alter_ego_mode">Alter-Ego Mode</string>
    <string name="common_action_play">Play</string>
    <string name="common_action_pause">Pause</string>
    <string name="common_audio_permission_needed">Audio permission needed to record audio</string>
    <string name="common_audio_permission_denied">Audio permission denied</string>
    <string name="common_feedback">Feedback</string>
    <string name="error_no_email_clients">No email client installed. Please install an email app from playstore.</string>
    <string name="new_session_saving">Saving session…</string>
    <string name="new_session_save_error">An error occurred while saving new session. Please try again.</string>
    <string name="session_updating">Updating session…</string>
    <string name="session_update_error">An error occurred while updating session. Please try again.</string>
    <string name="session_deleting">Deleting session…</string>
    <string name="session_delete_error">An error occurred while deleting session. Please try again.</string>
    <string name="new_comment_saving">Saving comment…</string>
    <string name="new_comment_save_error">An error occurred while saving comment. Please try again.</string>
    <string name="comment_updating">Updating comment…</string>
    <string name="comment_update_error">An error occurred while updating comment. Please try again.</string>
    <string name="new_user_saving">Saving user…</string>
    <string name="new_user_save_error">An error occurred while saving user. Please try again.</string>
    <string name="user_updating">Updating user…</string>
    <string name="user_update_error">An error occurred while updating user. Please try again.</string>
    <string name="common_content_desc_show_emoji">Show emoji</string>
    <string name="common_content_desc_show_keyboard">Show keyboard</string>
    <string name="file_uploading">Uploading…</string>
    <string name="file_uploading_with_percent">Uploading %1$d</string>
    <string name="file_upload_error">An error occurred while uploading files. Please try again.</string>
    <string name="common_action_retry">Retry</string>
    <string name="session_type_diary">Diary</string>
    <string name="session_type_trending">Trending</string>
    <string name="session_type_Ego">Ego</string>
    <string name="session_type_following">Followed</string>
    <string name="session_type_advised">Advised</string>
    <string name="session_type_new">New</string>
    <string name="session_type_all">All</string>
    <string name="session_home_action_how_to_use">How Claire Works</string>
    <string name="session_home_action_join_discussion">Check Instagram</string>
    <string name="session_home_action_settings">Settings</string>
    <string name="session_home_action_share_app">Send Claire To Someone</string>
    <string name="sessions_home_action_content_desc_dismiss_alert">Dismiss</string>
    <string name="session_detail_content_desc_submit_comment">Submit comment</string>
    <string name="session_detail_content_desc_record_audio">Record audio</string>
    <string name="session_detail_content_desc_add_photo">Add photo</string>
    <string name="session_detail_hint_enter_reply">Positive advises only, no ads…</string>
    <string name="session_detail_hint_enter_advice">Advise like Claire or even better…</string>
    <string name="session_detail_error_message_or_audio_empty">Please enter a message or record an audio</string>
    <string name="session_detail_content_desc_comment_remove_audio">Remove audio</string>
    <string name="session_detail_content_desc_share_response">Share response</string>
    <string name="session_detail_comment_share_message">Here is an advise I received from Dear Claire - Secret Diary Chat: %s</string>
    <string name="session_detail_unfeature_session">Remove session from trending</string>
    <string name="session_detail_action_edit_session">Edit session</string>
    <string name="session_detail_featured_notice">NOTICE: This session is currently trending and you are still anonymous. To remove from public view, tap edit or ask Claire.</string>
    <string name="session_detail_action_edit_comment">Edit advise</string>
    <string name="session_detail_action_me_too">Me2🌺</string>
    <string name="session_detail_me_too_count">%1$s</string>
    <string name="create_session_page_title">New session</string>
    <string name="new_post_action_content_desc_removed_attached_file">Remove attached file</string>
    <string name="new_post_action_send">SAVE and SEND</string>
    <string name="new_post_hint_title">Message title</string>
    <string name="new_post_hint_message">Start your message with Dear Claire, …</string>
    <string name="new_post_attach_files">Attach files:</string>
    <string name="create_session_hint_type_message">Start your text or voice note with Dear Claire</string>
    <string name="create_session_content_desc_add_photo">Add photo</string>
    <string name="create_session_content_desc_submit_session">Submit session</string>
    <string name="create_session_content_desc_record_audio">Record audio</string>
    <string name="create_session_content_desc_change_font">Change font</string>
    <string name="create_session_content_desc_change_background">Change background</string>
    <string name="create_session_content_desc_remove_audio">Remove audio</string>
    <string name="create_session_content_desc_remove_photo">Remove photo</string>
    <string name="create_session_error_title_empty">Please enter a title for your session</string>
    <string name="create_session_error_message_or_audio_empty">Please enter a message or record an audio</string>
    <string name="create_session_error_message_too_short">Message characters must be greater than 100</string>
    <string name="create_session_select_photo">Select photo</string>
    <string name="create_session_record_audio_title">Record audio</string>
    <string name="create_session_record_audio_message">Press to record</string>
    <string name="create_session_record_audio_action_ok">OK</string>
    <string name="create_session_title_select_font">Select font</string>
    <string name="create_session_title_enter_title">Enter Title</string>
    <string name="create_session_hint_type_title">What\'s the session about?</string>
    <string name="create_session_action_submit">Save</string>
    <string name="create_session_action_submit_and_save">Send And Save</string>
    <string name="create_session_privacy_mode">Do you want other users to reply and follow this diary session?</string>
    <string name="create_session_enable_replies">Do you want Claire to reply and follow this diary session?</string>
    <string name="create_session_inactivity_message">Go on darling 🌸. Tell me how you feel.</string>
    <string name="create_profile_page_title">Welcome To Claire</string>
    <string name="create_profile_page_subtitle">Quickly create an anonymous account</string>
    <string name="create_profile_hint_nickname">Nickname (can change later)</string>
    <string name="create_profile_input_error_nickname_claire_not_allowed">Using claire here is not allowed but you can later</string>
    <string name="create_profile_input_error_nickname_invalid">Please enter a nickname with more than 3 characters</string>
    <string name="create_profile_input_error_gender_invalid">Please select a gender</string>
    <string name="create_profile_action_create_profile">Submit</string>
    <string-array name="create_profile_genders">
        <item>Select gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </string-array>
    <string name="sign_up_page_title">Create an account</string>
    <string name="sign_up_page_subtitle">It\'s free</string>
    <string name="sign_up_hint_email">Email</string>
    <string name="sign_up_hint_secret_code">Secret code</string>
    <string name="sign_up_action_sign_up">Sign Up</string>
    <string name="sign_up_already_have_account">Already have an account?</string>
    <string name="sign_up_action_sign_in">Sign In</string>
    <string name="sign_up_error_weak_secret_code">The secret code is weak. Please use a different one and try again.</string>
    <string name="sign_up_error_invalid_email">The email address is invalid. Please use a different one and try again.</string>
    <string name="sign_up_error_user_exists">A user already exists with the email address. Please use a different one and try again.</string>
    <string name="sign_up_error_nickname_exists">The nickname already exists. Please select another one.</string>
    <string name="sign_up_error_generic">An error occurred while signing up. Please try again.</string>
    <string name="sign_up_signing_up">Signing Up…</string>
    <string name="forgot_secret_code_title">Forgot secret code</string>
    <string name="forgot_secret_code_subtitle">Use your email to reset your secret code</string>
    <string name="forgot_secret_code_hint_enter_email">Enter your email</string>
    <string name="forgot_secret_code_action_reset_code">Reset code</string>
    <string name="forgot_secret_code_action_open_inbox">Open inbox</string>
    <string name="forgot_secret_code_reset_link_sent">Your secret code reset link was sent to your email. Please check your email inbox.</string>
    <string name="onboarding_action_sign_up">Create an account</string>
    <string name="onboarding_action_sign_in">Already have an account?</string>
    <string name="onboarding_caption_anonymous">Your identity is completely anonymous</string>
    <string name="settings_title_session_update_notification_enabled">Session update notification</string>
    <string name="settings_summary_session_update_notification_enabled">Notifies you of new replies to your session</string>
    <string name="settings_title_daily_reminder_enabled">Claireminder</string>
    <string name="settings_summary_daily_reminder_enabled">Reminds you daily to write on Claire</string>
    <string name="settings_title_daily_reminder_time">Claireminder time</string>
    <string name="settings_summary_daily_reminder_hour">Select the hour to be reminded daily (24 hours format)</string>
    <string name="settings_title_select_theme">Select theme</string>
    <string name="settings_summary_select_theme">Select your preferred theme</string>
    <string name="alter_ego_login_page_title">Unlock Alter Ego</string>
    <string name="alter_ego_login_page_subtitle">Switch to the powerful side of you</string>
    <string name="alter_ego_login_hint_claire_id">claireID</string>
    <string name="alter_ego_login_hint_access_code">Access Code</string>
    <string name="alter_ego_login_action_login">Switch In</string>
    <string name="alter_ego_login_action_request_access">Request Access</string>
    <string name="alter_ego_login_action_donate">Donate</string>
    <string name="cancel">Cancel</string>
    <string name="ego">Ego</string>
</resources>