<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_how_to_use"
        android:icon="@drawable/ic_help_white_24dp"
        android:title="@string/session_home_action_how_to_use" />

    <item
        android:id="@+id/nav_share"
        android:icon="@drawable/ic_share_white_24dp"
        android:title="@string/session_home_action_share_app" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/round_settings_white_24"
        android:title="@string/session_home_action_settings" />

    <item
        android:id="@+id/nav_join_conv_on_instagram"
        android:icon="@drawable/ic_instagram_white_24dp"
        android:title="@string/session_home_action_join_discussion" />

</menu>
