<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/rounded_dialog_layout"
        android:padding="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:text="@string/create_session_title_enter_title"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/create_session_title_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/create_session_hint_type_title"
            android:inputType="textCapSentences"
            android:maxLength="200" />

        <Spinner
            android:id="@+id/create_session_mood_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp" />

        <Switch
            android:id="@+id/create_session_privacy_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/create_session_privacy_mode"
            app:drawableTintColor="@{@color/active_icon_dark}"
            app:startDrawable="@{@drawable/round_lock_white_24}"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Switch
            android:id="@+id/create_session_replies_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:checked="true"
            android:text="@string/create_session_enable_replies"
            app:drawableTintColor="@{@color/active_icon_dark}"
            app:startDrawable="@{@drawable/round_reply_white_24}"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingEnd="4dp"
            android:paddingStart="4dp"
            android:padding="30dp"

            android:orientation="horizontal">

            <TextView
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textAllCaps="true"
                android:layout_marginEnd="30dp"
                android:textColor="@color/user_badge_color"
                />
            <TextView
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/create_session_action_submit_and_save"
                android:textColor="@color/user_badge_color"
                />
        </LinearLayout>

    </LinearLayout>

</layout>