<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimary"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".ui.onboarding.OnboardingFragment">

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/onboarding_app_icon"
            style="@style/AuthAppLogo"
            android:layout_width="@dimen/auth_app_logo_size"
            android:layout_height="@dimen/auth_app_logo_size"
            android:contentDescription="@null"
            app:spin="@{true}" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@string/font_family_medium"
            android:gravity="center_horizontal"
            android:paddingTop="8dp"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@string/font_family_regular"
            android:gravity="center_horizontal"
            android:text="@string/app_catch_phrase"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/white" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp"
            android:text="@string/onboarding_caption_anonymous"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/tertiary_text_light" />

        <FrameLayout
            android:id="@+id/onboarding_sign_up_button_container"
            android:layout_width="match_parent"
            android:layout_height="52dp">

            <View
                android:id="@+id/onboarding_sign_up_button_hint"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rect_round_white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/onboarding_sign_up_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/onboarding_action_sign_up"
                android:textColor="@android:color/black"
                app:backgroundTint="@android:color/white" />

        </FrameLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/onboarding_sign_in_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_action_sign_in"
            android:textColor="@android:color/white" />

    </LinearLayout>

</layout>