<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.mobymagic.clairediary.vo.Status" />

        <variable
            name="resource"
            type="com.mobymagic.clairediary.vo.Resource" />

        <variable
            name="callback"
            type="com.mobymagic.clairediary.ui.common.RetryCallback" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimary"
        tools:context=".ui.forgotsecretcode.ForgotSecretCodeFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/forgot_code_form_card"
            style="@style/AuthCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="12dp"
                app:visibleGone="@{resource.status != Status.SUCCESS}">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@string/font_family_medium"
                    android:text="@string/forgot_secret_code_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@string/font_family_regular"
                    android:text="@string/forgot_secret_code_subtitle"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/forgot_code_email_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    app:error="@{resource.message}">

                    <EditText
                        android:id="@+id/forgot_code_email_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@string/font_family_regular"
                        android:hint="@string/forgot_secret_code_hint_enter_email"
                        android:inputType="textEmailAddress"
                        android:maxLength="50" />

                </com.google.android.material.textfield.TextInputLayout>

                <include
                    layout="@layout/layout_auth_error_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:resource="@{resource}" />

                <Button
                    android:id="@+id/forgot_code_reset_button"
                    style="@style/WideColoredButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:text="@string/forgot_secret_code_action_reset_code" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="16dp"
                app:visibleGone="@{resource.status == Status.SUCCESS}">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/forgot_secret_code_reset_link_sent" />

                <Button
                    android:id="@+id/forgot_code_open_inbox_button"
                    style="@style/WideColoredButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="12dp"
                    android:text="@string/forgot_secret_code_action_open_inbox" />

            </LinearLayout>

            <include
                layout="@layout/layout_auth_loading_state"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:resource="@{resource}" />

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/forgot_code_logo_image"
            style="@style/AuthAppLogo"
            android:layout_width="@dimen/auth_app_logo_size"
            android:layout_height="@dimen/auth_app_logo_size"
            android:layout_alignTop="@id/forgot_code_form_card"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-32dp"
            android:contentDescription="@null" />

    </RelativeLayout>

</layout>